Added post and get methods for messages with in memory storage

--- a/ContactUsDemo/app/src/components/App/App.css
+++ b/ContactUsDemo/app/src/components/App/App.css
@@ -1,7 +1,8 @@
 .App .App-contact-form {
     margin-top: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .App .App-submit {
