--- a/ContactUsDemo/app/src/components/App/App.css
+++ b/ContactUsDemo/app/src/components/App/App.css
@@ -1,10 +1,8 @@
 .App .App-contact-form {
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
 
 .App .App-submit {
-    text-align: center;
-}
+  text-align: center; }
